engine/tests/detection_corpus/bad/secret_bearer.ts
const headers = { authorization: "Bearer AbCdEf123456GhIjKl789012MnOpQr345678StUvWx90" };
